# RefactoringPJC2

./: CMakeLists.txt  Refractoring.cpp
